1999-09-14  David Lazaro Saz  <khelekir@encomix.es>

	* Source/NSButtonCell.m: NeXT look-alike changes
	([-drawingRectForBounds:]): Made NSButton a special case.  The
	drawing rect is calculated in a different way than the other
	cell types.
	([-cellSize]): Added changes that take the above into account and
	removed extra inner border if only there's an image to draw and
	no text.
	([-drawInteriorWithFrame:inView:]): Added a nice translation
	effect when pushing a button.

Mon Sep 13  1999  Nicola Pero  <n.pero@mi.flashnet.it>

	* Source/NSImageView.m ([-setImage:]): Added update of the cell. 
	([-setImageAlignment:]): idem.	
	([-setImageScaling:]): idem.
	([-setImageFrameStyle:]): idem. 
	* Source/NSView.m ([-encodeWithCoder:]): added encoding of the
	autoresizingMask ([-initWithCoder:]): added decoding of the same
	variable.
	
Sun Sep 12  1999  Nicola Pero  <n.pero@mi.flashnet.it>

        * Source/NSView.m ([-resizeWithOldSuperviewSize:]): Fixed
        difficult bug hunted for months: removed floor() used in the
        middle of the computation of widths and heights.  Widths and
        heights are float, and must not to be arbitrarily rounded to
        integers in the middle of a computation.  This bug would cause
        obscure, very little, misalignment in various views after resize.
        The misalignments could become appreciable and ugly after repeated
        resizes.

Sun Sep 12  1999  Nicola Pero  <n.pero@mi.flashnet.it>

        * Source/NSImageCell.m ([-cellSize]): added method.
        ([-drawingRectForBounds:]): added method.
        ([-drawInteriorWithFrame:inView:]): usual bug fix (see Sep 11).

1999-09-11  David Lazaro Saz <khelekir@encomix.es>

       	* Headers/gnustep/gui/NSGraphics.h: Changed parameter declaration
	of bordered rectangle drawing functions to conform with MacOS X
	specs.

1999-09-11  Michael Hanni   <mhanni@sprintmail.com>

	* Source/NSMenu.m: many small fixes and optimizations for quicker