@@ -1,3 +1,10 @@
+Tue Sep 14  1999  Nicola Pero  <n.pero@mi.flashnet.it>
+
+	* Source/NSButton.m: ([-drawRect:]): Removed method. 
+	* Source/NSPopUpButton.m ([-drawRect:]): Corrected method.  
+	It should not draw the cell in its argument rect, but in its bounds. 
+	* Source/NSTextField.m: ([-drawRect:]): Removed method. 
+
 1999-09-14  David Lazaro Saz  <khelekir@encomix.es>
 
 	* Source/NSButtonCell.m: NeXT look-alike changes
